# gazebo_world_library

./: CMakeLists.txt  package.xml
world/: FactoryWorld.world  NoFactory.world  TestCourse.world  hillsideHouse.world  hillsideVillage.world
world/courses/: 10m_dash_asphalt.world  10m_dash_mud.world  10m_debris_asphalt.world  10m_debris_mud.world  10m_incline_asphalt.world  10m_incline_mud.world  hallways.world  warpwall_asphalt.world  warpwall_mud.world
world/gvr_bot/: gvr_test_1.world  maze_1.world  terrain_001.world  terrain_002.world
world/meshes/: gvr_bot_water_tank_terrain001.stl  gvr_bot_water_tank_terrain002.stl
