<?xml version="1.0"?>
<package format="2">
  <name>gazebo_world_library</name>
  <version>0.0.0</version>
  <description>Collection of assorted Gazebo world files (examples and test courses)</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="jcoombe@metamorphsoftware.com">Joseph Coombe</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="website">https://www.metamorphsoftware.com/</url>


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <author email="metamorph@metamorphsoftware.com">Austin Tabulog</author>
  <author email="jcoombe@metamorphsoftware.com">Joseph Coombe</author>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/world/meshes"/>
    <gazebo_ros gazebo_media_path="${prefix}/world/meshes"/>
    <gazebo_ros gazebo_resource_path="${prefix}/world/meshes"/>
  </export>
</package>
